syntax = "proto3";
package ie.gmit.ds;
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "ie.gmit.ds";

service PassHash{
	rpc Hash(HashRequest) returns (HashResponse);
	rpc Validate(ValidateRequest) returns (google.protobuf.BoolValue);
}

message HashRequest{
	int32 userID = 1;
	string password = 2;
}

message HashResponse{
	int32 userID = 1;
	bytes hash = 2;
	bytes salt = 3;
}

message ValidateRequest{
	string password = 1;
	bytes hash = 2;
	bytes salt = 3;
}